--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/iii?useSSL=false&serverTimezone=Asia/Taipei&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+company.name=Jenny Big Company
+company.tel=04-23265860
+name=Jenny
+age=27
